--- a/_includes/archive-link.html
+++ b/_includes/archive-link.html
@@ -3,7 +3,7 @@
   <ul class="footer__social">
     <li><a class="fa fa-lg fa-envelope-o" href="mailto:{{ site.email }}"></a></li>
     {% for social in site.social %}
-      <li><a class="fa fa-lg fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank"></a></li>
+      <li><a class="fa fa-lg fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank" rel="noopener"></a></li>
     {% endfor %}
   </ul>
 </footer>
