--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,7 @@ layout: default
               <li><a class="fa fa-lg fa-envelope-o" href="mailto:{{ site.email }}"></a></li>
             {% endif %}
             {% for social in site.social %}
-              <li><a class="fa fa-lg fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank"></a></li>
+              <li><a class="fa fa-lg fa-{{ social[0] }}" href="{{ social[1] }}" target="_blank" rel="noopener"></a></li>
             {% endfor %}
           </ul>
         {% endif %}
