Fixing Template and Secondary Color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,7 +6,7 @@ $font-body: 'Inconsolata', monospace;
 $font-post: 'Lora', serif;
 
 $color-alpha: #B0197E;
-$color-alpha--light: #f5f3ef;
+$color-alpha--light: rgba(225, 28, 82, 0.09);
 
 $color-black: #0a0a0a;
 $color-grey: #f8f9f9;
