--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -8,7 +8,11 @@ layout: default
       <span>Back to Posts</span>
     </a>
     {% for post in site.categories[page.title] %}
-      <figure class="absolute-bg preview__img" style="background-image: url('{{ post.image }}');"></figure>
+      {% if post.image %}
+        <figure class="absolute-bg mast__img" style="background-image: url('{{ post.image }}');"></figure>
+      {% else %}
+        <figure class="absolute-bg preview__img" style="background-image: url('/assets/img/default.jpg');"></figure>
+      {% endif %}
     {% endfor %}
     <div class="previews__container">
       <span>Category</span>
